[project]
name = "keepass-env"
version = "0.1.2"
authors = [
    {name = "Alexander Rodionov", email = "tandav@tandav.me"},
]
description = "read key-value pairs from a .kdbx file and set them as environment variables or return as dict"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pykeepass",
]

[project.optional-dependencies]
dev = [
    "bumpver",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "mkdocs",
    "mkdocs-material",
]

[project.urls]
source = "https://github.com/tandav/pipe21"
docs = "https://tandav.github.io/pipe21/"
issues = "https://github.com/tandav/pipe21/issues"
"release notes" = "https://github.com/tandav/pipe21/releases"


[project.scripts]
keepass-env = "keepass_env:print_env"

# ==============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ==============================================================================

[tool.bumpver]
current_version = "v0.1.2"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{pep440_version}"',
    '^current_version = "{version}"',
]
"keepass_env.py" = [
    "^__version__ = '{pep440_version}'",
]

# ==============================================================================

[tool.mypy]
# todo: review this
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ==============================================================================

[tool.ruff]
extend-select = [
    "W",
    "C",
    "I",
    "SIM",
    "TCH",
    "C4",
    "S",
    "BLE",
    "B",
    "T10",
    "INP",
    "PIE",
    "PL",
    "RUF",
]
ignore = [
    "E501",  # line too long
    "E731",
    "E701",
    "E702",
    "F403", # star imports
    "F405", # star imports
    "B008",
    "PLR0913",
    "TCH003",
    "S105",
    "S106",
]

[tool.ruff.per-file-ignores]
"examples/*" = ["INP001"]
"tests/*" = ["S101"]

[tool.ruff.isort]
force-single-line = true

# ==============================================================================

[tool.pylint.messages-control]
disable = [
    "C0116",
    "C0301",
    "C0103",
    "C0114",
    "E0401",
    "R0913",
]

# ==============================================================================
