[metadata]
name = keepass_env
version = 0.0.7
description = read key-value pairs from a .kdbx file and set them as environment variables or return as dict
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tandav/keepass-env
author = Alexander Rodionov
author_email = tandav@tandav.me

[options]
py_modules = keepass_env
install_requires =
    pykeepass
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    bumpver
    pre-commit
    pytest

[bumpver]
current_version = "v0.0.7"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = True
tag = True

[bumpver:file_patterns]
setup.cfg =
    version = {pep440_version}
    current_version = "{version}"
keepass_env.py =
    __version__ = '{pep440_version}'

[flake8]
max-line-length = 250
recursive = true
aggressive = 3
jobs = 8


[isort]
line_length = 120
include_trailing_comma = true
force_single_line = true
indent = 4


[mypy]
python_version = 3.11
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
